# AFM-Batch-Processing

./: .gitignore  LICENSE  README.md  devenv.nix  pyproject.toml
Examples/: Scienta-Omicron.ipynb
