[project]
name = "afm-batch-processing"
version = "0.1.0"
description = ""
authors = [
    {name = "installer",email = "installer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "access2thematrix (>=0.4.4,<0.5.0)",
    "nomicron (>=1.7,<2.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scipy (>=1.15.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
